@@ -1,5 +1,10 @@
 2018-02-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
+	* coders/fits.c (ReadFITSImage): Validate that file size is
+	sufficient for claimed image properties.  Fixes oss-fuzz issue
+	6429 "graphicsmagick/coder_FITS_fuzzer: Timeout in
+	graphicsmagick_coder_FITS_fuzzer". (Credit to OSS-Fuzz)
+
 	* magick/image.c (CloneImage): Check image pixel limits in
 	CloneImage() when it is used to change the image dimensions.  This
 	avoids depending on the using code to detect and report such
